# camera-demo

./: CMakeLists.txt  README.md  camera-demo.spec  in.main-manifest.yml  main-manifest.yml
.rpconfig/: manifest.yml
CameraStream/: CMakeLists.txt  CameraReader.cpp
ObjectDetection/: CMakeLists.txt  ObjectDetection.cpp
conf.d/cmake/: config.cmake
redtest/: CMakeLists.txt
test/afb-test/: CMakeLists.txt  in.test-manifest.yml
test/afb-test/etc/: CMakeLists.txt
